--- a/owldiff-protege-plugin/pom.xml
+++ b/owldiff-protege-plugin/pom.xml
@@ -74,28 +74,34 @@
             <version>1.0.2</version>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>edu.stanford.protege</groupId>
-            <artifactId>org.protege.editor.core.application</artifactId>
-            <version>4.3.0</version>
+            <artifactId>protege-editor-core</artifactId>
+            <version>5.5.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/edu.stanford.protege/protege-editor-owl -->
         <dependency>
             <groupId>edu.stanford.protege</groupId>
-            <artifactId>org.protege.editor.owl</artifactId>
-            <version>4.3.0</version>
+            <artifactId>protege-editor-owl</artifactId>
+            <version>5.5.0</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>edu.stanford.protege</groupId>
-            <artifactId>org.protege.common</artifactId>
-            <version>4.3.0</version>
+            <artifactId>protege-common</artifactId>
+            <version>5.5.0</version>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/net.sourceforge.owlapi/owlapi-distribution -->
         <dependency>
-            <groupId>owlapi</groupId>
-            <artifactId>owlapi</artifactId>
-            <version>3.2.5</version>
+            <groupId>net.sourceforge.owlapi</groupId>
+            <artifactId>owlapi-distribution</artifactId>
+            <version>5.1.16</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -129,14 +135,14 @@
                 <version>2.0.2</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>14</source>
+                    <target>14</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.7</version>
+                <version>2.4.0</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
