--- a/owldiff-parent/pom.xml
+++ b/owldiff-parent/pom.xml
@@ -26,42 +26,42 @@
             <name>KBSS Maven 2 Repository</name>
             <url>http://kbss.felk.cvut.cz/m2repo</url>
         </repository>
-        <repository>
-            <!-- owlapi -->
-            <id>oss - releases</id>
-            <name>OSS Maven 2 Repository</name>
-            <url>https://oss.sonatype.org/content/repositories/releases</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </releases>
-        </repository>
-        <repository>
-            <!-- owlapi -->
-            <id>oss - snapshots</id>
-            <name>OSS Maven 2 Repository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </snapshots>
-        </repository>
-        <repository>
-            <!-- protege -->
-            <id>oss - central sync</id>
-            <name>OSS Maven 2 Repository</name>
-            <url>https://oss.sonatype.org/content/repositories/central-sync</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </releases>
-        </repository>
-        <repository>
-            <!-- protege -->
-            <id>eclipse - testing</id>
-            <name>Eclipse Testing Repository</name>
-            <url>http://maven.eclipse.org/nexus/content/repositories/testing</url>
-        </repository>
+<!--        <repository>-->
+<!--            &lt;!&ndash; owlapi &ndash;&gt;-->
+<!--            <id>oss - releases</id>-->
+<!--            <name>OSS Maven 2 Repository</name>-->
+<!--            <url>https://oss.sonatype.org/content/repositories/releases</url>-->
+<!--            <releases>-->
+<!--                <enabled>true</enabled>-->
+<!--                <updatePolicy>always</updatePolicy>-->
+<!--            </releases>-->
+<!--        </repository>-->
+<!--        <repository>-->
+<!--            &lt;!&ndash; owlapi &ndash;&gt;-->
+<!--            <id>oss - snapshots</id>-->
+<!--            <name>OSS Maven 2 Repository</name>-->
+<!--            <url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
+<!--            <snapshots>-->
+<!--                <enabled>true</enabled>-->
+<!--                <updatePolicy>always</updatePolicy>-->
+<!--            </snapshots>-->
+<!--        </repository>-->
+<!--        <repository>-->
+<!--            &lt;!&ndash; protege &ndash;&gt;-->
+<!--            <id>oss - central sync</id>-->
+<!--            <name>OSS Maven 2 Repository</name>-->
+<!--            <url>https://oss.sonatype.org/content/repositories/central-sync</url>-->
+<!--            <releases>-->
+<!--                <enabled>true</enabled>-->
+<!--                <updatePolicy>always</updatePolicy>-->
+<!--            </releases>-->
+<!--        </repository>-->
+<!--        <repository>-->
+<!--            &lt;!&ndash; protege &ndash;&gt;-->
+<!--            <id>eclipse - testing</id>-->
+<!--            <name>Eclipse Testing Repository</name>-->
+<!--            <url>http://maven.eclipse.org/nexus/content/repositories/testing</url>-->
+<!--        </repository>-->
 
 
     </repositories>
