--- a/owldiff-protege-plugin/pom.xml
+++ b/owldiff-protege-plugin/pom.xml
@@ -17,7 +17,7 @@
         <groupId>cz.cvut.kbss</groupId>
         <artifactId>owldiff-parent</artifactId>
         <relativePath>../owldiff-parent/pom.xml</relativePath>
-        <version>0.2.1</version>
+        <version>0.2.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -127,16 +127,6 @@
                 <version>2.6</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                    <source>14</source>
-                    <target>14</target>
                 </configuration>
             </plugin>
             <plugin>
