--- a/owldiff-standalone/pom.xml
+++ b/owldiff-standalone/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~ Copyright (c) 2012 Czech Technical University in Prague.
   ~
@@ -18,7 +17,7 @@
         <groupId>cz.cvut.kbss</groupId>
         <artifactId>owldiff-parent</artifactId>
         <relativePath>../owldiff-parent/pom.xml</relativePath>
-        <version>0.2.1</version>
+        <version>0.2.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -112,25 +111,6 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-            <!--
-                   plugin> <artifactId>maven-dependency-plugin</artifactId>
-                   <executions> <execution> <id>copy-dependencies</id>
-                   <phase>package</phase> <goals> <goal>copy-dependencies</goal>
-                   </goals> <configuration> <outputDirectory>
-                   ${basedir}/target/dist/lib </outputDirectory>
-                   <includeScope>runtime</includeScope>
-                   <overWriteIfNewer>true</overWriteIfNewer> </configuration>
-                   </execution> </executions> </plugin
-               -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                    <source>14</source>
-                    <target>14</target>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
     <dependencies>
@@ -140,78 +120,6 @@
             <version>${project.version}</version>
             <type>jar</type>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.mindswap.pellet</groupId>-->
-            <!--<artifactId>pellet-core</artifactId>-->
-            <!--<version>2.3.0</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.mindswap.pellet</groupId>-->
-            <!--<artifactId>pellet-owlapiv3</artifactId>-->
-            <!--<version>2.3.0</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.mindswap.pellet</groupId>-->
-            <!--<artifactId>pellet-query</artifactId>-->
-            <!--<version>2.3.0</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.mindswap.pellet</groupId>-->
-            <!--<artifactId>pellet-datatypes</artifactId>-->
-            <!--<version>2.3.0</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.mindswap.pellet</groupId>-->
-            <!--<artifactId>pellet-explanation</artifactId>-->
-            <!--<version>2.3.0</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.mindswap.pellet</groupId>-->
-            <!--<artifactId>pellet-modularity</artifactId>-->
-            <!--<version>2.3.0</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.mindswap.pellet</groupId>-->
-            <!--<artifactId>pellet-el</artifactId>-->
-            <!--<version>2.3.0</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.mindswap.pellet</groupId>-->
-            <!--<artifactId>pellet-rules</artifactId>-->
-            <!--<version>2.3.0</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.jgrapht</groupId>-->
-            <!--<artifactId>jgrapht-jdk1.5</artifactId>-->
-            <!--<version>0.7.3</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>aterm</groupId>-->
-            <!--<artifactId>aterm</artifactId>-->
-            <!--<version>1.6</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>xsdlib</groupId>-->
-            <!--<artifactId>xsdlib</artifactId>-->
-            <!--<version>20030225</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>relaxngDatatype</groupId>-->
-            <!--<artifactId>relaxngDatatype</artifactId>-->
-            <!--<version>20020414</version>-->
-            <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
