--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <artifactId>owldiff</artifactId>
     <packaging>pom</packaging>
     <name>OWLDiff</name>
-    <version>0.2.1</version>
+    <version>0.2.1-SNAPSHOT</version>
     <description>OWLDiff - diff of OWL ontologies</description>
     <distributionManagement>
         <repository>
@@ -28,9 +28,6 @@
         </repository>
     </distributionManagement>
     <modules>
-        <!-- not maintained any more -->
-        <!--<module>owldiff-neon-plugin</module>
--->
         <module>owldiff-parent</module>
         <module>owldiff-core</module>
         <module>owldiff-standalone</module>
