--- a/owldiff-api/src/main/resources/application.properties
+++ b/owldiff-api/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=9000
+
+#Session timeout config in seconds
+server.servlet.session.timeout=20
+
+cors.config.allowed.origins=http://localhost:8000
+
+server.error.include-message=always
