--- a/owldiff-api/pom.xml
+++ b/owldiff-api/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <spring.version>2.5.5</spring.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
@@ -53,6 +54,11 @@
             <artifactId>junit</artifactId>
             <version>4.13.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
