--- a/owldiff-gui/package.json
+++ b/owldiff-gui/package.json
@@ -21,6 +21,7 @@
     "@mui/lab": "^5.0.0-alpha.63",
     "@mui/material": "^5.2.6",
     "@mui/styles": "^5.2.3",
+    "file-saver": "^2.0.5",
     "gatsby": "^4.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
