Fixed bugs, add env variables, fixed common and inferred vars

--- a/owldiff-api/src/main/resources/application.properties
+++ b/owldiff-api/src/main/resources/application.properties
@@ -4,5 +4,6 @@ server.port=9000
 server.servlet.session.timeout=120
 
 cors.config.allowed.origins=http://localhost:8000
+client.gui.url=http://localhost:8000
 
 server.error.include-message=always
