--- a/owldiff-gui/.env.production
+++ b/owldiff-gui/.env.production
@@ -1,2 +1,2 @@
-GATSBY_API_URL=http://localhost:9000
-GATSBY_CLIENT_URL=http://localhost:8000
+GATSBY_API_URL=http://devdom.org/api
+GATSBY_CLIENT_URL=http://devdom.org
