Add main java class

--- a/owldiff-api/pom.xml
+++ b/owldiff-api/pom.xml
@@ -26,14 +26,16 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring.version}</version>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>cz.cvut.kbss.owldiff.api.Application</mainClass>
-                        </manifest>
-                    </archive>
+                    <mainClass>cz.cvut.kbss.owldiff.api.Application</mainClass>
                 </configuration>
+
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
