Bug fixing, add comments, add countdown, add loading

--- a/owldiff-api/src/main/resources/application.properties
+++ b/owldiff-api/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+spring.profiles.active=dev
+
 server.port=9000
 
+#Configure max upload size of files
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=22MB
+
 #Session timeout config in seconds
-server.servlet.session.timeout=120
+server.servlet.session.timeout=2400
 
 cors.config.allowed.origins=http://localhost:8000
 client.gui.url=http://localhost:8000
