--- a/owldiff-api/pom.xml
+++ b/owldiff-api/pom.xml
@@ -99,6 +99,16 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.galigator.openllet</groupId>
+            <artifactId>openllet-owlapi</artifactId>
+            <version>2.6.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.galigator.openllet</groupId>
+            <artifactId>openllet-jena</artifactId>
+            <version>2.6.5</version>
+        </dependency>
     </dependencies>
 
 </project>
