--- a/owldiff-gui/package.json
+++ b/owldiff-gui/package.json
@@ -24,6 +24,7 @@
     "file-saver": "^2.0.5",
     "gatsby": "^4.4.0",
     "react": "^17.0.1",
+    "react-countdown-hook": "^1.1.1",
     "react-dom": "^17.0.1",
     "typescript": "^4.5.4"
   }
