--- a/owldiff-gui/package.json
+++ b/owldiff-gui/package.json
@@ -23,9 +23,15 @@
     "@mui/styles": "^5.2.3",
     "file-saver": "^2.0.5",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-manifest": "^4.12.1",
     "react": "^17.0.1",
     "react-countdown-hook": "^1.1.1",
     "react-dom": "^17.0.1",
+    "react-virtualized-auto-sizer": "^1.0.6",
     "typescript": "^4.5.4"
+  },
+  "devDependencies": {
+    "react-window": "^1.8.6",
+    "react-window-tree": "^1.0.4"
   }
 }
