--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <artifactId>owldiff</artifactId>
     <packaging>pom</packaging>
     <name>OWLDiff</name>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.2.1</version>
     <description>OWLDiff - diff of OWL ontologies</description>
     <distributionManagement>
         <repository>
