--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -21,7 +21,8 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '14'
-        distribution: 'temurin'
+        distribution: 'adopt'
+        cache: maven
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
