--- a/pom.xml
+++ b/pom.xml
@@ -43,4 +43,11 @@
             </extension>
         </extensions>
     </build>
+    <distributionManagement>
+      <repository>
+        <id>github</id>
+        <name>GitHub Packages</name>
+        <url>https://maven.pkg.github.com/psiotwo/owldiff</url>
+      </repository>
+    </distributionManagement>
 </project>
