--- a/owldiff-parent/pom.xml
+++ b/owldiff-parent/pom.xml
@@ -92,4 +92,12 @@
             </extension>
         </extensions>
     </build>
+  
+    <distributionManagement>
+        <repository>
+          <id>github</id>
+          <name>GitHub Packages</name>
+          <url>https://maven.pkg.github.com/psiotwo/owldiff</url>
+        </repository>
+    </distributionManagement>
 </project>
