--- a/owldiff-parent/pom.xml
+++ b/owldiff-parent/pom.xml
@@ -83,6 +83,10 @@
                     <target>14</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M6</version>
+            </plugin>
         </plugins>
         <extensions>
             <extension>
@@ -92,12 +96,24 @@
             </extension>
         </extensions>
     </build>
-  
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>5.9.1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <distributionManagement>
         <repository>
-          <id>github</id>
-          <name>GitHub Packages</name>
-          <url>https://maven.pkg.github.com/psiotwo/owldiff</url>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/psiotwo/owldiff</url>
         </repository>
     </distributionManagement>
 </project>
