--- a/owldiff-core/pom.xml
+++ b/owldiff-core/pom.xml
@@ -100,9 +100,8 @@
             <version>0.91</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
